# systray-rs

./: Cargo.toml
src/: lib.rs
src/api/win32/: mod.rs
